--- a/index.html
+++ b/index.html
@@ -450,3 +450,7 @@ function goToCake(){
 
 </body>
 </html>
+<!-- COPYRIGHT -->
+<div style="position:fixed;bottom:8px;left:50%;transform:translateX(-50%);color:var(--muted);font-size:12px;font-family:Inter,Segoe UI,Roboto,Arial;">
+  &copy; Made by @Dhrubajyoti Deb
+</div>
