--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Gift Wish — Bhutki</title>
+<title>Gift Wish</title>
 <style>
   :root{
     --bg:#071022;
